src/test/deca/context/invalid/expr_cast_null_to_boolean.deca
// Test of the rule (3.39) : can't cast null to boolean.

{
	boolean var1;
	null var2;
	var1 = (boolean)(var2);
}

// Résultat :
//# a
